--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <label for="password">Password</label>
             <input type="password" id="password" name="password" required>
             
-           <button type="submit"> <a href="C:\Users\moham\OneDrive\Desktop\desktop\ps4\project.html">Login</a></button>
+           <button type="submit"> <a href="./project.html">Login</a></button>
         </form>
     </div>
 </body>
