--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
      <header>
      	<a href="#" class = "logo">
-     		<img src="C:\Users\moham\Downloads\car.png">
+     		<img src="./car.png">
      	</a>
 
           <ul class="navlist">
